src/snapshots/pbsql__path_convertor__tests__insert_from_select.snap
---
source: src/path_convertor.rs
expression: translate_result
---
Ok:
  - ~/books/matches: main
  - - INSERT INTO
    - "  main.table_contents (\"id\", \"loserId\", \"winnerId\", \"matchDate\")"
    - SELECT
    - "  main.table_contents.id || '2',"
    - "  \"loserId\","
    - "  main.table_contents.winnerId,"
    - "  \"matchDate\""
    - FROM
    - "  main.table_contents"
  - - Insert:
        or: ~
        ignore: false
        into: true
        table_name:
          - value: main
            quote_style: ~
          - value: table_contents
            quote_style: ~
        table_alias: ~
        columns:
          - value: id
            quote_style: "\""
          - value: loserId
            quote_style: "\""
          - value: winnerId
            quote_style: "\""
          - value: matchDate
            quote_style: "\""
        overwrite: false
        source:
          with: ~
          body:
            Select:
              distinct: ~
              top: ~
              projection:
                - UnnamedExpr:
                    BinaryOp:
                      left:
                        CompoundIdentifier:
                          - value: main
                            quote_style: ~
                          - value: table_contents
                            quote_style: ~
                          - value: id
                            quote_style: ~
                      op: StringConcat
                      right:
                        Value:
                          SingleQuotedString: "2"
                - UnnamedExpr:
                    Identifier:
                      value: loserId
                      quote_style: "\""
                - UnnamedExpr:
                    CompoundIdentifier:
                      - value: main
                        quote_style: ~
                      - value: table_contents
                        quote_style: ~
                      - value: winnerId
                        quote_style: ~
                - UnnamedExpr:
                    Identifier:
                      value: matchDate
                      quote_style: "\""
              into: ~
              from:
                - relation:
                    Table:
                      name:
                        - value: main
                          quote_style: ~
                        - value: table_contents
                          quote_style: ~
                      alias: ~
                      args: ~
                      with_hints: []
                      version: ~
                      partitions: []
                  joins: []
              lateral_views: []
              selection: ~
              group_by:
                Expressions: []
              cluster_by: []
              distribute_by: []
              sort_by: []
              having: ~
              named_window: []
              qualify: ~
          order_by: []
          limit: ~
          limit_by: []
          offset: ~
          fetch: ~
          locks: []
          for_clause: ~
        partitioned: ~
        after_columns: []
        table: false
        "on": ~
        returning: ~
        replace_into: false
        priority: ~
