src/snapshots/pbsql__path_convertor__tests__select1.snap
---
source: src/path_convertor.rs
expression: translate_result
---
Ok:
  - ~/books/things: main
  - - SELECT
    - "  main.table_contents.id,"
    - "  main.table_contents.title,"
    - "  main.table_contents.subtitle,"
    - "  main.table_contents.image_url,"
    - "  main.table_contents.external_link,"
    - "  main.table_contents.external_link_title,"
    - "  main.table_contents.excluded"
    - FROM
    - "  main.table_contents"
    - WHERE
    - "  main.table_contents.id = ?"
    - LIMIT
    - "  1"
  - - Query:
        with: ~
        body:
          Select:
            distinct: ~
            top: ~
            projection:
              - UnnamedExpr:
                  CompoundIdentifier:
                    - value: main
                      quote_style: ~
                    - value: table_contents
                      quote_style: ~
                    - value: id
                      quote_style: ~
              - UnnamedExpr:
                  CompoundIdentifier:
                    - value: main
                      quote_style: ~
                    - value: table_contents
                      quote_style: ~
                    - value: title
                      quote_style: ~
              - UnnamedExpr:
                  CompoundIdentifier:
                    - value: main
                      quote_style: ~
                    - value: table_contents
                      quote_style: ~
                    - value: subtitle
                      quote_style: ~
              - UnnamedExpr:
                  CompoundIdentifier:
                    - value: main
                      quote_style: ~
                    - value: table_contents
                      quote_style: ~
                    - value: image_url
                      quote_style: ~
              - UnnamedExpr:
                  CompoundIdentifier:
                    - value: main
                      quote_style: ~
                    - value: table_contents
                      quote_style: ~
                    - value: external_link
                      quote_style: ~
              - UnnamedExpr:
                  CompoundIdentifier:
                    - value: main
                      quote_style: ~
                    - value: table_contents
                      quote_style: ~
                    - value: external_link_title
                      quote_style: ~
              - UnnamedExpr:
                  CompoundIdentifier:
                    - value: main
                      quote_style: ~
                    - value: table_contents
                      quote_style: ~
                    - value: excluded
                      quote_style: ~
            into: ~
            from:
              - relation:
                  Table:
                    name:
                      - value: main
                        quote_style: ~
                      - value: table_contents
                        quote_style: ~
                    alias: ~
                    args: ~
                    with_hints: []
                    version: ~
                    partitions: []
                joins: []
            lateral_views: []
            selection:
              BinaryOp:
                left:
                  CompoundIdentifier:
                    - value: main
                      quote_style: ~
                    - value: table_contents
                      quote_style: ~
                    - value: id
                      quote_style: ~
                op: Eq
                right:
                  Value:
                    Placeholder: "?"
            group_by:
              Expressions: []
            cluster_by: []
            distribute_by: []
            sort_by: []
            having: ~
            named_window: []
            qualify: ~
        order_by: []
        limit:
          Value:
            Number:
              - "1"
              - false
        limit_by: []
        offset: ~
        fetch: ~
        locks: []
        for_clause: ~
